[package]
name = "order-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protoc-grpcio = "2.0.0"

[dependencies]
protobuf = "2.0.0"
clap = { version = "4.0.17", features = ["derive"] }
grpcio = "0.11.0"
futures = "0.3.25"
futures-channel = "0.3.25"
futures-executor = "0.3.25"

[workspace]
members = []
